Implementing Get IssuedBooks for a Librarian